feat(wallet): add max spend balance from the wallet in auto mode

--- a/src/components/ScriptExplorer/styles.module.scss
+++ b/src/components/ScriptExplorer/styles.module.scss
@@ -25,3 +25,13 @@
 .outputsFormLabel {
   color: rgba(0, 0, 0, 0.54);
 }
+
+.maxSpend {
+  color: grey;
+  font-size: .7rem!important;
+  text-decoration: underline;
+  &:hover {
+    cursor: pointer;
+    text-decoration: none;
+  }
+}
