fix: linting errors

--- a/src/components/Coldcard/ColdcardFileReader.module.scss
+++ b/src/components/Coldcard/ColdcardFileReader.module.scss
@@ -7,7 +7,7 @@
 }
 
 .dropzone {
-  text-align:center;
+  text-align: center;
   height: 6rem;
   border-width: 2px;
   border-radius: 30px;
@@ -27,5 +27,5 @@
 }
 
 .uploadContainer {
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
